--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
         "next": "14.2.7",
+        "nodemailer": "^6.9.15",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
@@ -34,17 +35,18 @@
     },
     "devDependencies": {
         "@iconify-icon/react": "^2.1.0",
+        "@tanstack/eslint-plugin-query": "^5.32.1",
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.15",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.7",
-        "typescript": "^5",
         "@typescript-eslint/eslint-plugin": "7.1.1",
         "@typescript-eslint/parser": "7.1.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.7",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.1",
         "eslint-plugin-import": "2.29.1",
-        "@tanstack/eslint-plugin-query": "^5.32.1"
+        "typescript": "^5"
     }
 }
