--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/material-nextjs": "^6.0.1",
         "@mui/utils": "^6.0.1",
         "@mui/x-date-pickers": "^7.15.0",
+        "@stripe/stripe-js": "^4.10.0",
         "@tanstack/react-query": "^5.53.3",
         "@types/mapbox__mapbox-sdk": "^0.15.1",
         "axios": "^1.7.7",
@@ -32,6 +33,7 @@
         "react-number-format": "^5.4.1",
         "react-toastify": "^10.0.5",
         "react-use": "^17.5.1",
+        "stripe": "^17.3.1",
         "stylis-plugin-rtl": "^2.1.1"
     },
     "devDependencies": {
