--- a/package.json
+++ b/package.json
@@ -19,18 +19,24 @@
         "@mui/material-nextjs": "^6.0.1",
         "@mui/utils": "^6.0.1",
         "@mui/x-date-pickers": "^7.15.0",
+        "@reduxjs/toolkit": "^2.4.0",
+        "@stripe/react-stripe-js": "^3.0.0",
         "@stripe/stripe-js": "^4.10.0",
         "@tanstack/react-query": "^5.53.3",
         "@types/mapbox__mapbox-sdk": "^0.15.1",
         "axios": "^1.7.7",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
+        "i18next-resources-to-backend": "^1.2.1",
         "next": "14.2.7",
+        "next-i18n-router": "^5.5.1",
+        "next-intl": "^3.25.3",
         "nodemailer": "^6.9.15",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
         "react-number-format": "^5.4.1",
+        "react-redux": "^9.1.2",
         "react-toastify": "^10.0.5",
         "react-use": "^17.5.1",
         "stripe": "^17.3.1",
@@ -50,6 +56,7 @@
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.1",
         "eslint-plugin-import": "2.29.1",
+        "eslint-plugin-prettier": "^5.2.1",
         "typescript": "^5"
     }
 }
